# WebSFM

./: .gitignore  .gitmodules  README.md  main.py
SFM/: CMakeLists.txt  build_3rd.sh  config.yaml  core.py  mvs.py  struct.py  task.py
SFM/include/: CeresOptimizer.h  Frame.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MapDrawer.h  ORBVocabulary.h  ORBmatcher.h  Osmap.h  PnPsolver.h  System.h  Tracking.h  Viewer.h
SFM/include/interface/: Pybind.h  SceneMVS.h
SFM/src/: CeresOptimizer.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Osmap.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc
SFM/src/interface/: Pybind.cc  SceneMVS.cc
handler/: retrieve.py  session.py  tools.py
